# agentkit

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  test_mem.db
.github/workflows/: ci.yml  publish.yml
benchmarks/: run_benchmarks.py
docs/advanced/: async.md  caching.md  mcp.md  telemetry.md
docs/core/: agents.md  memory.md  providers.md  tools.md
docs/enterprise/: hitl.md  reflection.md  structured.md  swarm.md  workflows.md
docs/getting-started/: installation.md  quickstart.md
examples/: basic_usage.py  code_generator_reflection.py  customer_support_stategraph.py  debugging.py  multi_agent.py  research_team_hierarchy.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/advanced/async/: index.html
site/advanced/caching/: index.html
site/advanced/mcp/: index.html
site/advanced/telemetry/: index.html
site/core/agents/: index.html
site/core/memory/: index.html
site/core/providers/: index.html
site/core/tools/: index.html
site/enterprise/hitl/: index.html
site/enterprise/reflection/: index.html
site/enterprise/structured/: index.html
site/enterprise/swarm/: index.html
site/enterprise/workflows/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/search/: search_index.json
src/agentkit/: __init__.py  cli.py
src/agentkit/advanced/: telemetry.py
src/agentkit/core/: __init__.py  agent.py  config.py  exceptions.py  memory.py  reflection.py  tools.py  types.py
src/agentkit/mcp/: __init__.py
src/agentkit/orchestration/: __init__.py  hierarchy.py  router.py  state.py  stategraph.py  swarm.py  team.py  web.py  workflow.py
src/agentkit/providers/: __init__.py  anthropic.py  base.py  google.py  mistral.py  mock.py  ollama.py  openai.py
src/agentkit/utils/: __init__.py  cache.py  logging.py  pdf.py
tests/: __init__.py  test_agent.py  test_cache.py  test_core.py  test_coverage_boost.py  test_hierarchy.py  test_memory.py  test_new_features.py  test_orchestration.py  test_providers.py  test_stategraph.py
