[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "agentkit"
version = "1.3.0"
description = "Enterprise-grade AI Agent Framework - Build AI agents in 5 lines of code, not 500. The most powerful, simple, and production-ready Python agent framework for 2026."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "AgentKit Team", email = "team@agentkit.dev" }
]
maintainers = [
    { name = "AgentKit Team", email = "team@agentkit.dev" }
]
keywords = [
    "ai",
    "agent",
    "llm",
    "openai",
    "anthropic",
    "claude",
    "gpt",
    "langgraph",
    "crewai",
    "autogen",
    "mcp",
    "model-context-protocol",
    "orchestration",
    "multi-agent",
    "workflow",
    "enterprise",
    "production",
    "framework",
    "automation",
    "rag",
    "vector-database",
    "streaming",
    "async",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "typing-extensions>=4.9.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "cachetools>=5.3.0",
    "jsonschema>=4.21.0",
    "tiktoken>=0.5.0",
    "jinja2>=3.1.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pymupdf>=1.23.0",
]

[project.optional-dependencies]
openai = ["openai>=1.12.0"]
anthropic = ["anthropic>=0.18.0"]
google = ["google-generativeai>=0.3.0"]
mistral = ["mistralai>=0.1.0"]
ollama = ["ollama>=0.1.0"]
redis = ["redis>=5.0.0"]
vector = [
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
]
mcp = ["mcp>=0.9.0"]
telemetry = [
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
]
all = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "mistralai>=0.1.0",
    "ollama>=0.1.0",
    "redis>=5.0.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
    "mcp>=0.9.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.98.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
agentkit = "agentkit.cli:app"

[project.urls]
Homepage = "https://github.com/JohnMikron/agentkit"
Repository = "https://github.com/JohnMikron/agentkit.git"
Issues = "https://github.com/JohnMikron/agentkit/issues"
Changelog = "https://github.com/JohnMikron/agentkit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/agentkit"]

[tool.hatch.build.targets.sdist]
include = ["src/agentkit", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]
ignore = ["E501", "B008", "ARG001", "ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["agentkit"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short -ra"
filterwarnings = ["ignore::DeprecationWarning"]
timeout = 60

[tool.coverage.run]
source = ["src/agentkit"]
branch = true
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
